# DESIGN-CUPS-BLANKET

./: README.md
cdmbd_sim/: LICENSE  README.md  pyproject.toml
cdmbd_sim/cdmbd/: __init__.py  cli.py  core.py  design_loop.py  phenomena.py  simulator.py
cdmbd_sim/examples/: minimal_example.py
cdmbd_sim/tests/: test_cdmbd.py
