[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cdmbd-sim"
version = "0.1.0"
description = "Computational demonstration of C-DMBD for product design (Design, Cups, and Blankets)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Luca M. Possati", email = "l.m.possati@utwente.nl" }
]
keywords = [
    "free energy principle",
    "Markov blanket",
    "product design",
    "active inference",
    "generative models",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "black", "ruff"]

[project.urls]
Homepage    = "https://github.com/possati/cdmbd-sim"
Repository  = "https://github.com/possati/cdmbd-sim"
Paper       = "https://doi.org/10.XXXX/cdmbd2026"

[project.scripts]
cdmbd-run = "cdmbd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
